--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
+    "react-spinners": "^0.17.0",
     "styled-components": "^6.1.19",
     "sweetalert2": "^11.22.2",
     "zustand": "^5.0.6"
